# example-app

./: .gitignore  Dockerfile  Makefile  README.md  config.yml  gunicornconfig.py  pyproject.toml  ruff.toml
.circleci/: config.yml
src/example_app/: __init__.py  __main__.py  app.py  decorators.py  routes.py
src/example_app/views/: __init__.py  entity.py
tests/: conftest.py  test_app.py
